Do not display spoilers in message previews
* Modify room list previewer to remove spoilers
* Also use room list previewer for notification text

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2046,6 +2046,7 @@
     "View chat timeline": "View chat timeline",
     "Room options": "Room options",
     "Join Room": "Join Room",
+    "[spoiler]": "[spoiler]",
     "(~%(count)s results)|other": "(~%(count)s results)",
     "(~%(count)s results)|one": "(~%(count)s result)",
     "Video rooms are a beta feature": "Video rooms are a beta feature",
